turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:31: error: type mismatch;
 found   : java.awt.Color
 required: Int
  state=rule(getCouleurSol())(state)(ind)
                          ^