turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 0;

def tag(c:Color){
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
}

def move(state:Int){
  state match {
  case 1 => avance()
  case 2 => gauche();avance()
  case 4 => droite();droite();avance()
  case 8 => droite();avance()
}
}


def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
	var ind = 0
  for(i<-0 to colors.length-1){
    if(getCouleurSol()==colors(i)){
      ind = i
    }
  }
  
  tag(colors((ind+1)%colors.length))
  move(state)
  state=rule(getCouleurSol())(state)(ind)
}